--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,27 @@
+/*
+Author: Irresistible Interfaces
+Author URI: https://irresistibleinterfaces.com.au/
+Version: 1.0
+*/
 
+
+/*------------------------------------*\
+    Table of contents
+\*------------------------------------*/
+
+
+/*--------------------------------------
+CSS STRUCTURE:
+
+1. GENERAL
+2. NAVIGATION BAR
+3. SEARCH BAR
+--------------------------------------*/
+
+
+/*------------------------------------*/
+/* 1. GENERAL                         */
+/*------------------------------------*/
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
     
 body{
@@ -17,6 +40,11 @@ ul{
 a{
     text-decoration: none;
 }
+
+
+/*------------------------------------*/
+/* 2. NAVIGATION BAR                         */
+/*------------------------------------*/
 nav{
     width:100%;
     box-shadow: 2px 2px 30px rgba(0,0,0,0.05);
@@ -121,4 +149,59 @@ nav{
     justify-content: center;
     align-items: center;
     font-weight: 400;
+}
+
+
+/*------------------------------------*/
+/* 3. SEARCH BAR                      */
+/*------------------------------------*/
+.search-bar{
+    width:100%;
+    height: 300px;
+    background-color: #ffffff;
+    position: fixed;
+    left: 0px;
+    bottom: 0px;
+    display: flex;
+    justify-content: center;
+    box-shadow: 2px -5px 30px rgba(0,0,0,0.1);
+    z-index: 101;
+    animation: search 0.3s;
+}
+.search-input{
+    width:90%;
+    border-bottom: 2px solid #555555;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100px;
+    margin-top: 20px;
+}
+.search-bar input{
+    width:100%;
+    padding: 30px;
+    border: none;
+    outline: none;
+    font-size: 2rem;
+    margin: 20px;
+    padding: 0px 20px;
+}
+.search-cancel{
+    color: #272727;
+    font-size: 2rem;
+    padding-right: 40px;
+}
+.search-bar{
+    display: none;
+}
+.search-bar-active{
+    display: flex;
+}
+@keyframes search{
+    0%{
+        bottom: -300px;
+    }
+    100%{
+        bottom: 0px;
+    }
 }
