--- a/css/style.css
+++ b/css/style.css
@@ -13,11 +13,12 @@ Version: 1.0
 /*--------------------------------------
 CSS STRUCTURE:
 
-1. GENERAL
+1. BASIC HTML CODE
 2. NAVIGATION BAR
 3. SEARCH BAR
 4. LOGIN AND SIGN UP FORM
 5. FULL SLIDER
+6. FEATURED CATEGORIES
 --------------------------------------*/
 
 
@@ -389,4 +390,54 @@ nav{
 }
 .f-slider-text strong font{
     color: #0b9d8a;
+}
+
+ 
+/*------------------------------------*/
+/* 6. FEATURED CATEGORIES             */
+/*------------------------------------*/
+.feature-heading{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.feature-heading h2{
+    font-size: 1.2rem;
+    letter-spacing: 1px;
+    color: #1b1919;
+    text-transform: uppercase;
+    font-weight: 600;
+    margin-top: 40px;
+    padding: 5px 30px;
+    border: 1px solid #e0e0e0;
+}
+.feature-box{
+    width:155px;
+    height: 160px;
+    margin: 0px 20px;
+    border-radius: 10px;
+    overflow: hidden;
+}
+.feature-box a img{
+    width:100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+.item span{
+    font-size: 1rem;
+    font-weight: 600;
+    margin: 5px;
+    color: #444444;
+}
+.item{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+#autoWidth{
+    display: flex;
+    justify-content: center !important;
+    margin: 10px auto 40px auto;
 }
