--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,8 @@ CSS STRUCTURE:
 7. PRODUCT LIST 1
 8. SALE OFFER BOXES
 9. BANNER
+10. SERVICES BOX
+11. FOOTER
 --------------------------------------*/
 
 
@@ -610,7 +612,7 @@ nav{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url(../images/Slider_03.png);
+    background-image: url(../images/Slider_04.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -656,3 +658,75 @@ nav{
     color: #0b9d8a;
 }
  
+
+/*------------------------------------*/
+/* 10. SERVICES BOX                   */
+/*------------------------------------*/
+.services{
+    display: flex;
+    width: 90%;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    margin: auto;
+}
+.services-box{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid rgba(0,0,0,0.1);
+    min-width: 250px;
+    padding: 20px;
+    margin: 15px;
+    flex-grow: 0.7;
+}
+.services-box i{
+    color: #0b9d8a;
+    font-size: 2rem;
+    margin: 15px;
+}
+.services-box span{
+    color: #222222;
+    font-weight: 600;
+    letter-spacing: 0.5px;
+    font-size: 1rem;
+}
+.services-box p{
+    color: #878787;
+    margin: 0px;
+    font-size: 0.9rem;
+}
+
+
+/*------------------------------------*/
+/* 11. FOOTER                         */
+/*------------------------------------*/
+footer{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 10px;
+    border-top: 1px solid rgba(0,0,0,0.1);
+    flex-wrap: wrap;
+    margin-top: 20px;
+}
+.copyright{
+    font-size: 0.9rem;
+    color: #4e4e4e;
+    letter-spacing: 1px;
+}
+.subscribe input{
+    width:240px;
+    height: 43px;
+    padding: 0px 20px;
+    border: 1px solid rgba(0,0,0,0.1);
+    outline: none;
+    box-shadow: 2px 2px 30px rgba(0,0,0,0.05);
+}
+.subscribe input[type="submit"]{
+    width:120px;
+    background-color: #0b9d8a;
+    color: #ffffff;
+    margin: 0px 5px;
+}
